Add alias system, fix PDF processing, improve XML output, and add launcher scripts
- Added alias management with --add-alias and --alias-from-clipboard commands
- Fixed PDF text extraction for local PDF files
- Changed root XML tag to <onefilellm_output> for consistency
- Added cross-platform launcher scripts for Windows and Linux/macOS
- Updated README with comprehensive documentation of new features

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,13 @@ pip-delete-this-directory.txt
 pip-log.txt
 pip-wheel-metadata/
 venv
+
+**/.claude/settings.local.json
+
+# Claude assistant files
+CLAUDE.md
+test_file.txt
+test_file.pdf
+clipboard_content.txt
+output.xml
+test_dir/
