--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 requests==2.28.0
 beautifulsoup4==4.11.1
 PyPDF2==2.10.0
-tiktoken==0.6.0
+tiktoken
 nltk==3.7
 nbformat==5.4.0
 nbconvert==6.5.0
@@ -10,7 +10,8 @@ pyperclip==1.8.2
 wget==3.2
 tqdm==4.64.0
 rich==12.4.4
-pandas==2.0.3
-openpyxl==3.1.2
-xlrd==2.0.1
-tabulate==0.9.0
+pandas
+openpyxl
+xlrd
+tabulate
+PyYAML
