detailed help with examples for aliases

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,11 @@ test_dir/
 REFACTORING_PLAN.md
 fix.md
 test_error.txt 
+"team.md" 
+"team_musings.md" 
+team_musings.md 
+team.md 
+CLAUDE.local.md 
+change.md 
+fix.md 
+todo.md 
